--- a/subliminal/Dockerfile
+++ b/subliminal/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:alpine
-LABEL maintainer Massimiliano Cannarozzo <massi@massi.dev>
+LABEL maintainer="Massimiliano Cannarozzo <massi@massi.dev>"
 
 RUN pip install --upgrade pip
 RUN pip install subliminal
