--- a/ffmpeg/Dockerfile
+++ b/ffmpeg/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-LABEL maintainer Massimiliano Cannarozzo <massi@massi.dev>
+LABEL maintainer="Massimiliano Cannarozzo <massi@massi.dev>"
 
 RUN apk add --no-cache --update ffmpeg
 
