--- a/transmission/Dockerfile
+++ b/transmission/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-LABEL maintainer Massimiliano Cannarozzo <massi@massi.dev>
+LABEL maintainer="Massimiliano Cannarozzo <massi@massi.dev>"
 
 RUN apk add --no-cache --update transmission-daemon curl transmission-cli docker-cli bash jq
 
