--- a/openvpn/Dockerfile
+++ b/openvpn/Dockerfile
@@ -3,8 +3,8 @@ LABEL maintainer="Massimiliano Cannarozzo <massi@massi.dev>"
 
 RUN apk add --no-cache --update openvpn iptables openssl
 
-ADD ./run /sbin/run
-ADD ./server.conf /etc/openvpn/server.conf.dist
+COPY ./run /sbin/run
+COPY ./server.conf /etc/openvpn/server.conf.dist
 
 VOLUME /etc/openvpn
 
