--- a/cloudflared/Dockerfile
+++ b/cloudflared/Dockerfile
@@ -9,7 +9,14 @@ RUN wget -qO /usr/bin/cloudflared $(wget -qO- https://api.github.com/repos/cloud
 
 FROM alpine
 LABEL maintainer="Massimiliano Cannarozzo <massi@massi.dev>"
+
+ARG PUID=1000
+ARG PGID=1000
+RUN addgroup -S -g ${PGID} app && adduser -S -u ${PUID} -G app app
+
 COPY --from=build /usr/bin/cloudflared /usr/bin/cloudflared
+
+USER app
 
 ENTRYPOINT ["cloudflared"]
 CMD ["-h"]
