--- a/minidlna/Dockerfile
+++ b/minidlna/Dockerfile
@@ -1,7 +1,13 @@
 FROM alpine
 LABEL maintainer="Massimiliano Cannarozzo <massi@massi.dev>"
 
+ARG PUID=1000
+ARG PGID=1000
+RUN addgroup -S -g ${PGID} app && adduser -S -u ${PUID} -G app app
+
 RUN apk add --no-cache --update minidlna
+
+USER app
 
 ENTRYPOINT ["minidlnad"]
 CMD ["-h"]
